                    Changes made to Pyjamas since 0.5p1
                    -----------------------------------

 * created a new parent platform called "array_extras" which is used
   for "sm", "mozilla", "opera" and "safari" in order to use things
   like Array.indexOf on all browser that suppport the array extras.

 * raise a TranslationError if a reserved word is used for a module
   name, this would cause unpredictable results in running code, which
   is very hard to debug.

 * fixed __contains__ on Tuples in mozilla and added TupleTest to LibTest

 * fixed the "!=" operator, it now uses pyjslib.eq

 * Yi Choong contributed a DateField widget, and example - thank you!

 * Local variables (in functions/methods) are now declared at the
   head of the function/method

 * Compiler option decorators now take the form @compiler.<option>

 * translator is now using unknown properties as module properties
   Take care of this when mixing JS and Python code :
     JS("var a = 1")
     if a == 1:
         pass
   "a" is not know to the translator because it was declared in JS.
   Do this :
     a = None
     JS("a = 1")
   Now a is known to python.

 * #180 - 25% reduction in code output size thanks to Kees moving
   some of the auto-generated code on a per-function basis into
   javascript support routines.

 * #152 - added buttonClick and fixed up CustomButton (see Toggle example)
   at same time.  EVENT.BUTTON_LEFT, BUTTON_MIDDLE, BUTTON_RIGHT had wrong
   #defines as well: only CustomButton was using them which was why nobody
   noticed.

 * Allowed all widget constructors to take kwargs which will result
   in the setXXXX method being called.  Tuples as kwargs will result
   in *args to the setXXXX method e.g.
        p = HorizontalPanel(Size=("600px", "200%"),
                            StyleName="class-name",
                            Visible=False)
   is equivalent to:
        p = HorizontalPanel()
        p.setSize("600px", "100%")